recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:11: error: Unit does not take parameters
	faireCarre()
                  ^